# wiki-connect

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_all.txt
data/: training.csv
docs/: data.js  data_util.js  index.css  index.html  util.js
docs/data/: deep_learning_graph.json  deep_learning_graph_predictions.json
plots/: favicon.drawio
src/wiki_connect/: __init__.py  run_all.py  training_visualization.ipynb
src/wiki_connect/data/: crawler.py  util.py  wikimedia_api.py
src/wiki_connect/model/: embed.py  encoder.py  inference.py  predictor.py  trainer.py
test/data_gen/: test_data_util.py
test/model/: test_complement.py
