[project]
name = "wiki-connect"
version = "0.1.0"
description = "Finding new connections between Wikipedia pages"
authors = [
    {name = "Maximilian Seeliger", email = "maximilian.seeliger@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pyqt6>=6.7.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.0",
    "torch-geometric>=2.6.1",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/wiki_connect"]
